--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello World!</title>
+  <meta charset="UTF-8">
+  <title>Minimum Number</title>
+  <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a0382b32bb39f0012e27bdc&product=inline-share-buttons"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/1b75214749.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel='stylesheet prefetch' href='https://bootswatch.com/4/sketchy/bootstrap.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
 
 <body>
-  <p>Hello World!</p>
+  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand" href="#">Minimum Number</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor03">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="number" placeholder="i.e. 25489204" id="input">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit" id="calc">Calculate</button>
+    </form>
+  </div>
+</nav>
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class="thead-dark">
+    <tr>
+      <th>Step</th>
+      <th>Process</th>
+    </tr>
+  </thead>
+  <tbody id="tableBody">
+    <tr>
+      <td>#</td>
+      <td>Please enter a string of numbers and I will find its minimum number...</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+<footer>
+  <p>This calculator was created by Ray Karyshyn. <span class="badge badge-pill badge-secondary">Nov. 8, 2017</span></p>
+  <div class="sharethis-inline-share-buttons"></div>
+</footer>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+
+    <script  src="js/index.js"></script>
+
 </body>
 </html>
